--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Jesus & Edurne getting hitched!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Jesus & Edurne getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:image" content="https://wedding.Jesusswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -48,7 +48,7 @@
                         <ul class="primary-nav">
                             <li><a href="#intro">How we met</a></li>
                             <li><a href="#events">Events</a></li>
-                            <li><a href="#instagram">Instagram</a></li>
+                            <li><a href="#instagJesus">InstagJesus</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
                         </ul>
@@ -68,9 +68,9 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
+                    <!--<h1>Jesus and Edurne</h1>-->
                     <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
+                    <!--<p class="intro">Jesus & Edurne are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>We are getting hitched</h3>
-                <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
+                <p>The dates are 28<sup>th</sup> & 28<sup>th</sup> of October '21 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
             </div>
@@ -106,22 +106,18 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunita.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                    I first saw Edurne in the Winter of 2015 when we attended a Christmas Party at American Airlines. While I was practising my best reggaeton and twerking
+                    at the dance floor, she approached in search for my free tequila vouchers. Love ensued :)
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunito.jpg" class="wp2"></div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/nenunita.jpg" class="wp8"></div>
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/nenunito.jpg" class="wp9"></div>
         </div>
     </div>
 </section>
@@ -136,9 +132,9 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>27th November</strong></p>
+                    <p><strong>27th October</strong></p>
 
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h5>Dinner <span class="time">7PM - 23PM</span></h5>
                     <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
                         attend the event together and a professional mehndi artist applies
                         mehndi to the bride's hands and feet. This will be having a celebratory
@@ -197,9 +193,9 @@
                         <strong>Ethnic indian wear</strong>
                         <br>
                         Ladies can wear something
-                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
+                        <a href="https://www.pinterest.com/Jesusswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
                         and gentlemen can be on
-                        their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
+                        their <a href="https://www.pinterest.com/Jesusswarooppatra/mehndi-dress-for-men/">vibrant
                         kurtas</a> with pants or pyjamas along with an optional shawl.
                     </p>
                     <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
@@ -208,20 +204,20 @@
                         <br>
                         A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
                         to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
+                        <a href="https://www.pinterest.com/Jesusswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
+                        & <a href="https://www.pinterest.com/Jesusswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
                     </p>
                     <h5>Wedding <span class="time">6PM-12AM</span></h5>
                     <p>
                         <strong>Indo-western</strong>
                         <br>
                         Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
+                        <a href="https://www.pinterest.com/Jesusswarooppatra/indo-western-lehengas/">lehengas</a>,
+                        <a href="https://www.pinterest.com/Jesusswarooppatra/indo-western-anarkalis/">anarkalis</a>,
                         dresses and the list
                         goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
                         suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
+                            href="https://www.pinterest.com/Jesusswarooppatra/high-neck-jackets-for-men/">high-neck
                         (band gala) waistcoat & shirt</a> combo.
                     </p>
                 </div>
@@ -231,19 +227,19 @@
 
 </section>
 
-<section id="instagram" class="section-padding">
+<section id="instagJesus" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
+                    <a href="https://instagJesus.com/explore/tags/JesusandEdurne/" target="_blank">#JesusAndEdurne</a>
                 </p>
             </div>
         </div>
         <div class="row section-border wp7">
             <div class="col-md-4 col-md-offset-4">
-                <img src="img/iphone_instagram.jpg">
+                <img src="img/iphone_instagJesus.jpg">
             </div>
         </div>
     </div>
@@ -336,11 +332,11 @@
 
 <section id="video-bg" class="hidden-sm hidden-xs">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+         data-property="{videoURL:'https://www.youtube.com/watch?v=08hVLqJSxEk',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
     </div>
     <div id="video-content">
-        <h5>Kolkata</h5>
-        <p>City of joy</p>
+        <h5>Bilbao</h5>
+        <p>City in the Bocho, the little valley</p>
     </div>
 </section>
 
@@ -465,7 +461,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Crafted by Jesus with lots of <span class="fa fa-heart pulse2"></span> for Edurne</p>
             </div>
         </div>
     </div>
