--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>ITC Fortune Park</h5>
-                            <p>Kona Expressway, Howrah, West Bengal 711403, India</p>
+                            <h5>Guggenheim Bilbao Museoa</h5>
+                            <p>Abandoibarra Etorb., 2, 48009 Bilbo, Bizkaia</p>
                         </div>
                         <div class="col-md-6">
                             <h5>Mr. Amit Roy</h5>
@@ -369,7 +369,7 @@
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
+                               href="https://m.uber.com/ul/?action=setPickup&client_id=AqW7UO_JmuSjMBnQ-u1MQOHMi1pntSPp&pickup=my_location&dropoff[formatted_address]=%3AAbandoibarra%20Etorb.%2C%202%2C%2048009%20Bilbo%2C%20Bizkaia&dropoff[latitude]=43.267403&dropoff[longitude]=-3.6927923"><i
                                     class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
@@ -405,7 +405,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
+                <p>We would greatly appreciate if you could RSVP before 1st of October '21</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
