--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     </div>
     <div id="video-content">
         <h5>Bilbao</h5>
-        <p>City in the Bocho, the little valley</p>
+        <p>City in the Botxo, the little valley</p>
     </div>
 </section>
 
