--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Jesus & Edurne getting hitched!</title>
+    <title>Edurne & Jesus getting hitched!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Jesus & Edurne getting hitched">
+    <meta property="og:title" content="Edurne & Jesus are getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.Jesusswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -68,9 +68,9 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Jesus and Edurne</h1>-->
+                    <!--<h1>Edurne and Jesus</h1>-->
                     <img src="img/logo-lg.png">
-                    <!--<p class="intro">Jesus & Edurne are getting hitched!</p>-->
+                    <!--<p class="intro">Edurne & Jesus are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -84,8 +84,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
-                <p>The dates are 29<sup>th</sup> & 30<sup>th</sup> of October '21 and we would like you to be a part of
+                <h3>Finalmente celebramos que nos casamos / We are getting hitched</h3>
+                <p>Contamos con vosotros el 6 y 7 de Mayo de 2022 en Bilbao.</p>
+                <p>The dates are 6<sup>th</sup> & 7<sup>th</sup> of May '22 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
             </div>
