--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">How we met</a></li>
-                            <li><a href="#events">Events</a></li>
-                            <li><a href="#instagJesus">InstagJesus</a></li>
-                            <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li><a href="#intro">Cómo nos conocimos / How we met</a></li>
+                            <li><a href="#events">Eventos / Events</a></li>
+                            <li><a href="#instaboda">instaboda</a></li>
+                            <li><a href="#eng-pics">Enlace / Engagement</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Bilbao</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Venue</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                            <li><a href="#map" class="login">Evento / Venue</a></li>
+                            <li><a href="#rsvp" class="btn-white btn-small">Asistencia / RSVP</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -88,7 +88,6 @@
                 <p>Contamos con vosotros el 6 y 7 de Mayo de 2022 en Bilbao.</p>
                 <p>The dates are 6<sup>th</sup> & 7<sup>th</sup> of May '22 and we would like you to be a part of
                     it.</p>
-                <div class="share-bar"></div>
             </div>
         </div>
     </div>
@@ -98,7 +97,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">¿Cómo nos conocimos? / How we met</h3>
             </div>
         </div>
         <div class="row">
@@ -122,45 +121,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Eventos/ Events</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>28th October</strong></p>
+                    <p><strong>6 Mayo / 6 May</strong></p>
 
-                    <h5>Dinner <span class="time">7PM - 23PM</span></h5>
-                    <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
-                        attend the event together and a professional mehndi artist applies
-                        mehndi to the bride's hands and feet. This will be having a celebratory
-                        festival feel to it with people wearing vibrant clothes and dancing, singing, playing
-                        games and a lot more.</p>
-                </div>
-                <div class="wp5">
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
-                        knot". With booze flowing down the floor and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
-                        pong matches & karaoke for sure.</p>
+                    <h5>Cena de Pintxos / Pintxos Dinner <span class="time">9PM - 01AM</span></h5>
+                    <p>Mercado de la Ribera.</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>29th November</strong></p>
+                    <p><strong>7 Mayo / 7 May</strong></p>
 
-                    <h5>Haldi <span class="time">10AM-11AM</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <h5>Fiesta Cócktail / Cocktail Party <span class="time">20PM-23PM</span></h5>
+                    <p>Guggenheim Bistro.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the
-                        knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
-                        as maximum number of guests would be attending this event. This is when the couple circle the
-                        sacred fire and are finally declared husband and wife.</p>
+                    <h5>Baile / Dancing <span class="time">23PM-03AM</span></h5>
+                    <p>Guggenheim Bistro CafeBar / CoffeBar.</p>
                 </div>
             </div>
         </div>
@@ -183,39 +165,12 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
-                    <h3 class="text-center section-padding">Ugh... dress codes?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h3 class="text-center section-padding">Dress codes?</h3>
                     <p>
-                        <strong>Ethnic indian wear</strong>
-                        <br>
-                        Ladies can wear something
-                        <a href="https://www.pinterest.com/Jesusswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
-                        and gentlemen can be on
-                        their <a href="https://www.pinterest.com/Jesusswarooppatra/mehndi-dress-for-men/">vibrant
-                        kurtas</a> with pants or pyjamas along with an optional shawl.
+                        <strong>Ir contento!!! / Just be happy!!!</strong>
+
                     </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
-                    <p>
-                        <strong>Western attire</strong>
-                        <br>
-                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
-                        to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/Jesusswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/Jesusswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
-                    </p>
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>
-                        <strong>Indo-western</strong>
-                        <br>
-                        Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/Jesusswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/Jesusswarooppatra/indo-western-anarkalis/">anarkalis</a>,
-                        dresses and the list
-                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
-                        suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/Jesusswarooppatra/high-neck-jackets-for-men/">high-neck
-                        (band gala) waistcoat & shirt</a> combo.
-                    </p>
+                    
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -223,13 +178,13 @@
 
 </section>
 
-<section id="instagJesus" class="section-padding">
+<section id="instaboda" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>A picture is worth a thousand words!</h3>
-                <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagJesus.com/explore/tags/JesusandEdurne/" target="_blank">#JesusAndEdurne</a>
+                <h3>Una imagen vale más que mil palabras. / A picture is worth a thousand words!</h3>
+                <p>Etiqueta tus fotos con el hastag / Tag your photos with the hashtag
+                    <a href="https://instagram.com/explore/tags/EdurneAndJesus/" target="_blank">#EdurneAndJesus</a>
                 </p>
             </div>
         </div>
@@ -245,7 +200,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Beautiful Bilabo Pics</h3>
+                <h3 class="header">Beautiful Bilbao Pics</h3>
             </div>
         </div>
         <div class="row">
@@ -336,48 +291,7 @@
     </div>
 </section>
 
-<section id="map" class="section-padding">
-    <div class="text-center">
-        <h3>How do I get there?</h3>
-        <p>It's way easier than you think!</p>
-    </div>
-    <div id="map-canvas"></div>
-    <div id="map-content-wrapper" class="container pointer-events-none">
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
-                <div class="text-center">
-                    <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
-                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
-                    </div>
-                </div>
-                <div id="map-content" class="pointer-events-auto">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5>Guggenheim Bilbao Museoa</h5>
-                            <p>Abandoibarra Etorb., 2, 48009 Bilbo, Bizkaia</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h5>Mr. Amit Roy</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+919412345678">+91 9412345678</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+917123456789">+91 7123456789</a></p>
-                        </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=AqW7UO_JmuSjMBnQ-u1MQOHMi1pntSPp&pickup=my_location&dropoff[formatted_address]=%3AAbandoibarra%20Etorb.%2C%202%2C%2048009%20Bilbo%2C%20Bizkaia&dropoff[latitude]=43.267403&dropoff[longitude]=-3.6927923"><i
-                                    class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
-                        </div>
-                        <div class="col-md-6" style="padding: 5px;">
-                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
-                                map</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 
 <section class="rsvp text-center" id="rsvp">
 
@@ -400,8 +314,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of October '21</p>
+                <h3>¿A qué esperas? / What are you waiting for?</h3>
+                <p>Por favor, confirma que asistirás en el formulario de abajo. / Please confirm you asistance filling the form below.</p>
             </div>
         </div>
     </div>
