--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">¿Cómo nos conocimos? / How we met</h3>
+                <h3 class="header">¿Qué vamos a celebrar? / What are we going to celebrate?</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunita.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I first saw Edurne in the Winter of 2015 when we attended a Christmas Party at American Airlines. While I was practising my best reggaeton and twerking
-                    at the dance floor, she approached in search for my free tequila vouchers. Love ensued :)
+                    Cuando se encuentran un informático gallego friki y disfrutón y una vasca parrandera y muy sociable, saltan chispas.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunito.jpg" class="wp2"></div>
