--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunita.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    Cuando se encuentran un informático gallego friki y disfrutón y una vasca parrandera y muy sociable, saltan chispas.
+                    Cuando se encuentran un informático gallego friki y disfrutón y una vasca parrandera y muy sociable, saltan chispas. Si a eso os unimos a vosotros parranderos y disfrutones, la llama está asegurada. /
+                    When a geeky and fun-loving Galician computer scientist and a  very sociable Basque party girl get together, sparks fly. If we add to that, you, the party people, the flame is guaranteed.
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/nenunito.jpg" class="wp2"></div>
