--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">Cómo nos conocimos / How we met</a></li>
+                            <li><a href="#intro">¿Qué vamos a celebrar?/ What are we going to celebrate?</a></li>
                             <li><a href="#events">Eventos / Events</a></li>
                             <li><a href="#instaboda">instaboda</a></li>
                             <li><a href="#eng-pics">Enlace / Engagement</a></li>
@@ -128,20 +128,18 @@
                 <div class="wp3">
                     <p><strong>6 Mayo / 6 May</strong></p>
 
-                    <h5>Cena de Pintxos / Pintxos Dinner <span class="time">9PM - 01AM</span></h5>
-                    <p>Mercado de la Ribera.</p>
+                    <h5>Cena de Pintxos / Pintxos Dinner <span class="time">21PM - 01AM</span></h5>
+                    <a href="https://www.lariberabilbao.com/">Mercado de la Ribera.</a>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <p><strong>7 Mayo / 7 May</strong></p>
-
                     <h5>Fiesta Cócktail / Cocktail Party <span class="time">20PM-23PM</span></h5>
-                    <p>Guggenheim Bistro.</p>
                 </div>
                 <div class="wp6">
                     <h5>Baile / Dancing <span class="time">23PM-03AM</span></h5>
-                    <p>Guggenheim Bistro CafeBar / CoffeBar.</p>
+                    <a href="https://www.bistroguggenheimbilbao.com/">Bistró Guggenheim.</a>
                 </div>
             </div>
         </div>
@@ -166,7 +164,7 @@
                     </button>
                     <h3 class="text-center section-padding">Dress codes?</h3>
                     <p>
-                        <strong>Ir contento!!! / Just be happy!!!</strong>
+                        <strong>Ir contento!!! / Just go happy!!!</strong>
 
                     </p>
                     
