--- a/index.html
+++ b/index.html
@@ -313,12 +313,10 @@
             <div class="col-md-6 col-md-offset-3">
                 <h3>¿A qué esperas? / What are you waiting for?</h3>
                 <p>Por favor, confirma que asistirás en el formulario de abajo. / Please confirm you asistance filling the form below.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3G8SeMS_MFKTgOFvCZrRzxJzoHgaUnWpvbkYm54tc7iQH-A/viewform?embedded=true" class="btn-white btn-small">Asistencia / RSVP</a>
             </div>
         </div>
     </div>
-<div style="text-align:center;">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd3G8SeMS_MFKTgOFvCZrRzxJzoHgaUnWpvbkYm54tc7iQH-A/viewform?embedded=true" width="500" height="320" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-</div>
 </section>
 <footer>
     <div class="container">
